--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,33 +1,37 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Teachers</h1>
+<% if session[:logged_in_teacher] %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Student</th>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Password digest</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <h1>Listing Teachers</h1>
 
-  <tbody>
-    <% @teachers.each do |teacher| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= teacher.student_id %></td>
-        <td><%= teacher.name %></td>
-        <td><%= teacher.email %></td>
-        <td><%= teacher.password_digest %></td>
-        <td><%= link_to 'Show', teacher %></td>
-        <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
-        <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Email</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @teachers.each do |teacher| %>
+        <tr>
+          <td><%= teacher.name %></td>
+          <td><%= teacher.email %></td>
+          <td><%= link_to 'Show', teacher %></td>
+          <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
+          <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Teacher', new_teacher_path %>
+  <br>
+
+  <%= link_to 'New Teacher', new_teacher_path %> | <%= link_to 'Logout', logout_path, method: "delete" %>
+
+<% else %>
+
+  You must log in to view this page.
+
+<% end %>
