--- a/app/views/gradebooks/dashboard.html.erb
+++ b/app/views/gradebooks/dashboard.html.erb
@@ -1,6 +1,12 @@
 <p id="notice"><%= notice %></p>
 <p id="alert"><%= alert %></p>
 
-<h1> Welcome to AWESOME Gradebook App </h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
 
-<%= link_to 'Login to access our AWESOME features', login_path %>
+    <h1> Welcome to AWESOME Gradebook App </h1>
+
+    <%= link_to 'Login to access our AWESOME features', login_path %>
+
+  </div>
+</div>
