Can add students to teachers

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,3 +54,13 @@ textarea {
 	margin-bottom: 60px;
 	}
 }
+
+//Tables
+td, th {
+  border:   1px solid gray;
+  padding: 3px;
+}
+
+th {
+  border: 1px solid gray;
+}
