--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,13 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Parent:</strong>
-  <%= @student.parent_id %>
-</p>
-
-<p>
-  <strong>Grade:</strong>
-  <%= @student.grade_id %>
+  <strong>Teacher:</strong>
+  <%= @student.teacher.name %>
 </p>
 
 <p>
@@ -18,11 +13,6 @@
 <p>
   <strong>Email:</strong>
   <%= @student.email %>
-</p>
-
-<p>
-  <strong>Password digest:</strong>
-  <%= @student.password_digest %>
 </p>
 
 <%= link_to 'Edit', edit_student_path(@student) %> |
