--- a/app/views/parents/_form.html.erb
+++ b/app/views/parents/_form.html.erb
@@ -11,6 +11,8 @@
     </div>
   <% end %>
 
+  <%= f.hidden_field :student_id %>
+
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
@@ -20,8 +22,8 @@
     <%= f.text_field :email %>
   </div>
   <div class="field">
-    <%= f.label :password_digest %><br>
-    <%= f.text_field :password_digest %>
+    <%= f.label :password %><br>
+    <%= f.text_field :password %>
   </div>
   <div class="actions">
     <%= f.submit %>
