--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,27 +1,31 @@
 <p id="notice"><%= notice %></p>
 
-<% if session[:logged_in_teacher] %>
-
   <h1>Listing Teachers</h1>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Email</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-
-    <tbody>
       <% @teachers.each do |teacher| %>
-        <tr>
-          <td><%= teacher.name %></td>
-          <td><%= teacher.email %></td>
-          <td><%= link_to 'Show', teacher %></td>
-          <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
-          <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
+        <h3> <%= teacher.name %> | <%= teacher.email %> </h3>
+        <p>
+          <%= link_to 'Show Teacher Info', teacher %> |
+          <%= link_to 'Edit Teacher Info', edit_teacher_path(teacher) %> |
+          <%= link_to 'Destroy Teacher', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </p>
+        <table>
+          <thead>
+            <th>Name</th>
+            <th>Email</th>
+            <th colspan="3"></th>
+          </thead>
+        <% teacher.students.each do |student| %>
+          <tr>
+            <td><%= student.name %></td>
+            <td><%= student.email %></td>
+            <%= link_to 'Add Parent', new_parent_path(student) %>
+            <td><%= link_to 'Show', student %></td>
+            <td><%= link_to 'Edit', edit_student_path(student) %></td>
+            <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+        <%= link_to 'Add a new student to this class', new_student_path(teacher) %>
       <% end %>
     </tbody>
   </table>
@@ -29,9 +33,3 @@
   <br>
 
   <%= link_to 'New Teacher', new_teacher_path %> | <%= link_to 'Logout', logout_path, method: "delete" %>
-
-<% else %>
-
-  You must log in to view this page.
-
-<% end %>
