Teachers can assign grades to students.

--- a/app/views/grades/_form.html.erb
+++ b/app/views/grades/_form.html.erb
@@ -11,6 +11,8 @@
     </div>
   <% end %>
 
+  <%= f.hidden_field :student_id %>
+
   <div class="field">
     <%= f.label :assignment_name %><br>
     <%= f.text_field :assignment_name %>
