--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Password digest:</strong>
-  <%= @parent.password_digest %>
+  <strong>Student:</strong>
+  <%= @parent.student.name %>
 </p>
 
 <%= link_to 'Edit', edit_parent_path(@parent) %> |
