--- a/app/views/parents/index.html.erb
+++ b/app/views/parents/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Email</th>
-      <th>Password digest</th>
+      <th>Student</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,7 +17,7 @@
       <tr>
         <td><%= parent.name %></td>
         <td><%= parent.email %></td>
-        <td><%= parent.password_digest %></td>
+        <td><%= parent.student.name %></td>
         <td><%= link_to 'Show', parent %></td>
         <td><%= link_to 'Edit', edit_parent_path(parent) %></td>
         <td><%= link_to 'Destroy', parent, method: :delete, data: { confirm: 'Are you sure?' } %></td>
