Pages are now restricted to respective account types

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,3 +64,13 @@ td, th {
 th {
   border: 1px solid gray;
 }
+
+//Forms
+
+.field {
+  padding-bottom: 1%;
+}
+
+#account_type {
+  font-weight: bold;
+}
