--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
+    <p id="notice"><%= notice %></p>
+    <p id="alert"><%= alert %></p>
 
     <div class="container">
       <%= yield %>
