--- a/app/views/parents/_form.html.erb
+++ b/app/views/parents/_form.html.erb
@@ -11,19 +11,24 @@
     </div>
   <% end %>
 
-  <%= f.hidden_field :student_id %>
+  <% if session[:account_type] == "teacher" %>
+
+    <%= f.hidden_field :student_id %>
+
+    <div class="field">
+      <%= f.label :name %><br>
+      <%= f.text_field :name %>
+    </div>
+    <div class="field">
+      <%= f.label :email %><br>
+      <%= f.text_field :email %>
+    </div>
+  <% end %>
+
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
     <%= f.label :password %><br>
-    <%= f.text_field :password %>
+    <%= f.password_field :password %>
   </div>
   <div class="actions">
     <%= f.submit %>
